Approaches tikz pictures

--- a/paper/related-work/algorithms.tex
+++ b/paper/related-work/algorithms.tex
@@ -2,7 +2,7 @@
 
 \section{Algorithms}
 \label{sec:relatedwork-algorithms}
-\acrshort{tcp} is essentially an extended version of \acrshort{tsm} since we can first execute the minimised test suite and afterwards the remaining test cases. Additionally, \cref{ssec:tsm} has explained that \acrshort{tsm} is an instance of the minimal hitting set problem, which is an NP-complete problem. Consequently, we know that both \acrshort{tsm} and \acrshort{tcp} are NP-complete problems as well and therefore, we require the use of \emph{heuristics}. A heuristic is an experience-based method that can be applied to solve a hard to compute problem by finding a fast approximation. However, the found solution will mostly be suboptimal, or sometimes the algorithm might even fail to find any solution at all. Given the relation between \acrshort{tsm} and the minimal hitting set problem, we can implement an optimisation algorithm by modifying any known heuristic that finds the minimal hitting set. This paper will now proceed by discussing a selection of these heuristics. The used terminology and the names of the variables have been changed to ensure mutual consistency between the algorithms. Every algorithm has been adapted to adhere to the conventions provided in \cref{def:alg-naming,def:cardinality}.
+\acrshort{tcp} is essentially an extended version of \acrshort{tsm} since we can first execute the minimised test suite and afterwards the remaining test cases. Additionally, \cref{ssec:tsm} has explained that \acrshort{tsm} is an instance of the minimal hitting set problem, which is an NP-complete problem. Consequently, we know that both \acrshort{tsm} and \acrshort{tcp} are NP-complete problems as well and therefore, we require the use of \emph{heuristics}. A heuristic is an experience-based method that can be applied to solve a hard to compute problem by finding a fast approximation \cite{6588537}. However, the found solution will mostly be suboptimal, or sometimes the algorithm might even fail to find any solution at all. Given the relation between \acrshort{tsm} and the minimal hitting set problem, we can implement an optimisation algorithm by modifying any known heuristic that finds the minimal hitting set. This paper will now proceed by discussing a selection of these heuristics. The used terminology and the names of the variables have been changed to ensure mutual consistency between the algorithms. Every algorithm has been adapted to adhere to the conventions provided in \cref{def:alg-naming,def:cardinality}.
 
 \begin{definition}[Naming convention]
 \label{def:alg-naming}
@@ -13,13 +13,13 @@
 	\item $C = \{c_1, \dots, c_m\}$: the set of all source code lines in the application, that are covered by at least one test case $T \in TS$.
 	\item $CT = \begin{bmatrix}
 		CT_1 & \dots & CT_m
-	\end{bmatrix}$: the set of test groups.
+	\end{bmatrix}$: the list of test groups.
 		\begin{itemize}
 			\item $CT_c = \{T_1, \dots, T_n\} \subseteq TS$: the test group $c$, which corresponds to the set of all test cases $T \in TS$ that cover the source code line $c \in C$.
 		\end{itemize}
 	\item $TL = \begin{bmatrix}
 		TL_1 & \dots & TL_n
-	\end{bmatrix}$: the set of coverage groups.
+	\end{bmatrix}$: the list of coverage groups.
 		\begin{itemize}
 			\item $TL_t = \{c_1, \dots, c_m\} \subseteq C$: the set of all source code lines $c \in C$ that are covered by test case $t \in TS$.
 		\end{itemize}
@@ -31,9 +31,8 @@
 For a finite set $S$, the cardinality $|S|$ is defined as the number of elements in $S$. In case of potential confusion, we can use $Card(S)$ to denote the cardinality of $S$.
 \end{definition}
 
-\newpage
 \input{related-work/algorithms/greedy.tex}
-\newpage
+\clearpage
 \input{related-work/algorithms/hgs.tex}
-\newpage
+\clearpage
 \input{related-work/algorithms/rocket.tex}
