--- a/paper/related-work/algorithms/rocket.tex
+++ b/paper/related-work/algorithms/rocket.tex
@@ -31,7 +31,7 @@ The third and final algorithm is the ROCKET algorithm. This algorithm has been p
 	\right.
 \]
 
-\noindent \Cref{tbl:rocket-failurematrix} contains an example of this matrix $MF$. In this table, we consider the hypothetical failure rates of the last three executions of six test cases.\\
+\noindent \Cref{tbl:rocket-failurematrix} contains an example of this matrix $MF$. In this table, we consider the hypothetical failure rates of the last two executions of six test cases.
 
 \begin{table}[h]
 \centering
@@ -40,7 +40,6 @@ The third and final algorithm is the ROCKET algorithm. This algorithm has been p
 	\textbf{run} & \textbf{$T_1$} & \textbf{$T_2$} & \textbf{$T_3$} & \textbf{$T_4$} & \textbf{$T_5$} & \textbf{$T_6$}\\\hline
 	$current - 1$ & $1$ & $1$ & $1$ & $1$ & $-1$ & $-1$\\
 	$current - 2$ & $-1$ & $1$ & $-1$ & $-1$ & $1$ & $-1$\\
-	$current - 3$ & $1$ & $1$ & $-1$ & $1$ & $1$ & $-1$\\
 	\hline
 \end{tabular}
 \caption{Example of the failure matrix $MF$.}
@@ -66,37 +65,42 @@ $$P_j = \sum_{i = 1 \dots m} MF[i, j] * \omega_i$$
 \caption{ROCKET algorithm}
 \label{alg:rocket}
 \begin{algorithmic}[1]
-	\State {\bfseries Input:} Set $TS = \{T_1, \dots, T_n\}$ of all test cases,
-
-	Execution time $E_t$ of every test case,
-	
-	Failure status $F$ for each test case over the previous $m$ successive iterations.
-	\State {\bfseries Output:} Priority of test cases $P$.
-	\State $P \gets array[1 \dots n]$ \Comment{initially $0$}
-	\State $MF \gets array[1 \dots m]$
-	\ForAll{$i \in 1 \dots m$}
-		\State $MF[i] \gets array[1 \dots n]$
-		\ForAll{$j \in 1 \dots n$}
-			\If{$F[j][i] = 1$} $MF[i][j] \gets -1$
-			\Else{} $MF[i][j] \gets 1$
-			\EndIf
-		\EndFor
-	\EndFor
-	\ForAll{$j \in 1 \dots n$}
+	\Require{the test suite $TS$, the execution times of the test cases $E$, the amount of previous executions to consider $m$, the failure statuses $F$ for each test case over the previous $m$ executions}
+	\Ensure{priority $P$ of the test cases}
+	\Procedure{ROCKETTCP}{$TS, E, m, F$}
+		\State $n \gets Card(TS)$
+		\State $P \gets array[1 \dots n]$ \Comment{initially $0$}
+		\State $MF \gets array[1 \dots m]$
 		\ForAll{$i \in 1 \dots m$}
-			\If{$i = 1$} $P[j] \gets P[j] + (MF[i][j] * 0.7)$
-			\ElsIf{$i = 2$} $P[j] \gets P[j] + (MF[i][j] * 0.2)$
-			\Else{} $P[j] + (MF[i][j] * 0.1)$
-			\EndIf
+			\State $MF[i] \gets array[1 \dots n]$
+			\ForAll{$j \in 1 \dots n$}
+				\If{$F[j][i] = 1$}
+					$MF[i][j] \gets -1$
+				\Else{}
+					$MF[i][j] \gets 1$
+				\EndIf
+			\EndFor
 		\EndFor
-	\EndFor
-	\State $Q \gets \{P[j] \vert j \in 1 \dots n\}$ \Comment{distinct priorities}
-	\State $G \gets array[1 \dots Card(Q)]$ \Comment{initially empty sets}
-	\ForAll{$j \in 1 \dots n$}
-		\State $p \gets P[j]$
-		\State $G[p] \gets G[p] \cup \{j\}$
-	\EndFor
-	\State Sort every group in $G$ based on ascending execution time in $E$.
-	\State Sort $P$ according to which group it belongs and its position within that group.
+		\ForAll{$j \in 1 \dots n$}
+			\ForAll{$i \in 1 \dots m$}
+				\If{$i = 1$}
+					$P[j] \gets P[j] + (MF[i][j] * 0.7)$
+				\ElsIf{$i = 2$}
+					$P[j] \gets P[j] + (MF[i][j] * 0.2)$
+				\Else{}
+					$P[j] + (MF[i][j] * 0.1)$
+				\EndIf
+			\EndFor
+		\EndFor
+		\State $Q \gets \{P[j] \vert j \in 1 \dots n\}$ \Comment{distinct priorities}
+		\State $G \gets array[1 \dots Card(Q)]$ \Comment{initially empty sets}
+		\ForAll{$j \in 1 \dots n$}
+			\State $p \gets P[j]$
+			\State $G[p] \gets G[p] \cup \{j\}$
+		\EndFor
+		\State Sort every group in $G$ based on ascending execution time in $E$.
+		\State Sort $P$ according to which group it belongs and its position within that group.
+		\State \Return $P$
+	\EndProcedure
 \end{algorithmic}
 \end{algorithm}
