--- a/paper/related-work/algorithms.tex
+++ b/paper/related-work/algorithms.tex
@@ -13,13 +13,13 @@
 	\item $C = \{c_1, \dots, c_m\}$: the set of all source code lines in the application, that are covered by at least one test case $T \in TS$.
 	\item $CT = \begin{bmatrix}
 		CT_1 & \dots & CT_m
-	\end{bmatrix}$: the set of test groups.
+	\end{bmatrix}$: the list of test groups.
 		\begin{itemize}
 			\item $CT_c = \{T_1, \dots, T_n\} \subseteq TS$: the test group $c$, which corresponds to the set of all test cases $T \in TS$ that cover the source code line $c \in C$.
 		\end{itemize}
 	\item $TL = \begin{bmatrix}
 		TL_1 & \dots & TL_n
-	\end{bmatrix}$: the set of coverage groups.
+	\end{bmatrix}$: the list of coverage groups.
 		\begin{itemize}
 			\item $TL_t = \{c_1, \dots, c_m\} \subseteq C$: the set of all source code lines $c \in C$ that are covered by test case $t \in TS$.
 		\end{itemize}
