Fix titlepage colours. Fixes #61

--- a/paper/software-engineering/agile-software-development/agile-manifesto.tex
+++ b/paper/software-engineering/agile-software-development/agile-manifesto.tex
@@ -8,6 +8,9 @@ Since the late 1990's, developers have tried to reduce the time occupied by the 
 \subsubsection{\emph{Individuals and interactions} over processes and tools}\label{sssec:agilevalue-individuals}
 Instead of meticulously following an outlined development process and utilising the best tools available, the main focus of attention should shift to the people behind the development and how they are interacting with each other. According to Glass, the quality of the programmers and the team is the most influential factor in the successful development of software \cite{glass2001agile}. 
 
+\newcommand{\agileprinciple}[2]{\paragraph*{Principle #1: #2}\mbox{}\\}
+
+
 \agileprinciple{5}{Build projects around motivated individuals. Give them the environment and support they need, and trust them to get the job done.}
 The key to successful software development is ensuring that the people working on the project are both skilled and motivated. Research has shown that, while proficient programmers can cost twice as much as their less-skilled counterparts, their productivity lies between 5 to 30 times higher \cite{glass2001agile}. Any factor that negatively impacts a healthy environment or decreases motivation should be changed \cite[p.~34]{martin2014}.
 
