--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -30,6 +30,10 @@
 \usepackage{tikzscale}
 \usepackage{titlesec}
 
+\usepackage{comment}
+%\excludecomment{figure}
+%\let\endfigure\relax
+
 % Tikz libraries.
 \usetikzlibrary{arrows,automata,shapes.geometric}
 
@@ -206,26 +210,26 @@
 
 \input{glossary.tex}
 \clearpage
-%\input{introduction.tex}
+\input{introduction.tex}
 \clearpage
-%\input{software-engineering.tex}
+\input{software-engineering.tex}
 \clearpage
 \input{related-work.tex}
 \clearpage
 \input{velocity.tex}
 \clearpage
-%\input{evaluation.tex}
+\input{evaluation.tex}
 \clearpage
-%\input{conclusion.tex}
+\input{conclusion.tex}
 \clearpage
 \input{bibliography.tex}
 \clearpage
-%\input{list-of-figures.tex}
+\input{list-of-figures.tex}
 \clearpage
-%\input{list-of-listings.tex}
+\input{list-of-listings.tex}
 \clearpage
-%\input{list-of-tables.tex}
+\input{list-of-tables.tex}
 \clearpage
-%\input{appendices.tex}
+\input{appendices.tex}
 
 \end{document}
