Fix list of things

--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -13,9 +13,8 @@
 \usepackage{caption}
 \usepackage{fancyhdr}
 \usepackage{float}
-\usepackage[a4paper,plainpages=false]{hyperref}
+\usepackage[final]{hyperref}
 \usepackage[automake]{glossaries}
-\usepackage{cleveref}
 \usepackage{lipsum}
 \usepackage{listing}
 \usepackage{listings,lstautogobble}
@@ -29,10 +28,7 @@
 \usepackage{tikz}
 \usepackage{tikzscale}
 \usepackage{titlesec}
-
-\usepackage{comment}
-%\excludecomment{figure}
-%\let\endfigure\relax
+\usepackage{cleveref}
 
 % Tikz libraries.
 \usetikzlibrary{arrows,automata,shapes.geometric}
